tests/format/misc/errors/js/import-assertions-for-export-without-from.js
export { default as foo } assert { type: "json" };
